--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ const recipes = {
     {name: "Massaman-currypasta", amount: 1, unit: "pakje", category: "Kruiden"},
     {name: "Kokosmelk", amount: 400, unit: "ml", category: "Zuivel"},
     {name: "Sperziebonen (diepvries)", amount: 450, unit: "g", category: "Groenten"},
-    {name: "Wortelblokjes", amount: 200, unit: "g", category: "Groenten"},
+    {name: "Wortel", amount: 200, unit: "g", category: "Groenten"},
     {name: "Rode ui", amount: 150, unit: "g", category: "Groenten"},
     {name: "Citroen", amount: 1, unit: "stuk", category: "Groenten"},
     {name: "Basmatirijst", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"}
@@ -382,7 +382,18 @@ const recipes = {
     {name: "Spekjes", amount: 200, unit: "g", category: "Vlees/Vis"},
     {name: "Pecorino Romano", amount: 90, unit: "g", category: "Zuivel"},
     {name: "Middelgrote scharreleieren", amount: 4, unit: "stuk", category: "Vlees/Vis"}
-]
+],
+"Spaghetti Bolognese": [
+    {name: "Spekjes", amount: 125, unit: "g", category: "Vlees/Vis"},
+    {name: "Ui", amount: 1, unit: "stuk", category: "Groenten"},
+    {name: "Wortel", amount: 150, unit: "g", category: "Groenten"},
+    {name: "Rundergehakt", amount: 500, unit: "g", category: "Vlees/Vis"},
+    {name: "Kippenbouillon", amount: 1, unit: "l", category: "Kruiden"},
+    {name: "Heinz frito", amount: 400, unit: "ml", category: "Groenten"},
+    {name: "Tomatenpuree", amount: 1, unit: "blikje", category: "Groenten"},
+    {name: "Oregano", amount: 1, unit: "tl", category: "Kruiden"},
+    {name: "Spaghetti", amount: 300, unit: "g", category: "Rijst/Couscous/Pasta"}
+],
 };
 
 const days = ["day1","day2","day3","day4","day5","day6","day7"];
